Important scrolling fix!
Fix for weird scrolling issue when collapsed group without selected tab was last in list

--- a/userChrome.css
+++ b/userChrome.css
@@ -139,6 +139,8 @@ tab-group:not([split-view-group]) {
       tab:not([selected]) {
         max-height: 0 !important;
         opacity: 0 !important;
+        /* fixes weird scrolling issue */
+        overflow: hidden !important;
       }
     }
   }
